# local-llm-router

./: .gitignore  LICENSE  README.md  pyproject.toml  upload-pypi.bat  upload-testpypi.bat
.github/workflows/: extension-ci.yml  python-ci.yml
config/: community_picks.json  models.datacenter.example.json  models.example.json
docs/: BACKLOG.md  DATACENTER.md  DECISION_LOG.md  FOR_APP_AUTHORS.md  INTEGRATION.md  LOCAL_MODELS.md  NAMING_CONVENTIONS.md  PACKAGING_USER_GUIDE.md  PUBLISHING.md  REPOSITORY.md  SECURITY.md  USER_JOURNEY.md  USER_STORIES.md  backlog.md  benchmark-evidence.md  for-app-authors.md  integration.md  local-models.md  naming-conventions.md  packaging-user-guide.md  publishing.md  repository.md  security.md
docs/integrations/: litellm.md
examples/agent_runner/: README.md  patterns.py  run.py
examples/demo_ui/: README.md  app.js  index.html  server.py  start.ps1  start.sh  styles.css
examples/embed_script/: README.md  copy_helper.py
examples/local_work_assistant/: README.md  app.py
examples/poc_compare/: README.md  run.py
examples/quickstart/: README.md  local-llm-router.models.json  mini_app.py  try_it.ps1  try_it.sh  two_agents_smoke.py
extension/vscode/: README.md  package-lock.json  package.json
extension/vscode/src/: extension.ts  quickAskPanel.ts
scripts/: _pip-helpers.ps1  fix-publish-env.ps1  publish-secrets.ps1.example  publish-with-secrets.ps1  publish.ps1  upload-pypi.ps1
scripts/ollama_benchmark/: README.md  benchmark_models.py
src/local_llm_router/: __init__.py  __main__.py  advice.py  benchmark.py  cli.py  community_picks.py  compare.py  complexity.py  discovery.py  hints.py  local_models.py  model_guide.py  model_registry.py  models.py  ollama_errors.py  ollama_generate.py  poc_models.py  presets.py  quantization.py  requirements.py  routing.py  session.py  setup_wizard.py  stack_health.py  startup_tips.py  tiering.py  validation.py
src/split_stack/: __init__.py  __main__.py  advice.py  benchmark.py  cli.py  community_picks.py  compare.py  complexity.py  discovery.py  hints.py  local_models.py  model_guide.py  model_registry.py  models.py  ollama_generate.py  poc_models.py  presets.py  quantization.py  requirements.py  routing.py  session.py  setup_wizard.py  stack_health.py  startup_tips.py  tiering.py  validation.py
tests/: conftest.py  test_advice.py  test_benchmark.py  test_benchmark_cli.py  test_cli.py  test_cli_mode.py  test_community_picks.py  test_compare.py  test_complexity.py  test_discovery_audit.py  test_explain.py  test_hints.py  test_model_guide.py  test_model_registry.py  test_presets.py  test_quantization.py  test_quickstart.py  test_requirements.py  test_routing.py  test_session.py  test_setup.py  test_setup_cli.py  test_stack_health.py  test_startup_tips.py  test_tiering.py
