[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "split-stack"
version = "0.3.1"
description = "Python routing library for local LLM agent loops: score prompts, map tiers to model names, embed in your runner."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Eddie Baumel" }]
keywords = ["llm", "routing", "ollama", "complexity", "python", "local-first", "agents"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/edwardjbaumel/split-stack"
Documentation = "https://github.com/edwardjbaumel/split-stack/blob/main/docs/FOR_APP_AUTHORS.md"
Repository = "https://github.com/edwardjbaumel/split-stack"
Issues = "https://github.com/edwardjbaumel/split-stack/issues"

[project.optional-dependencies]
ollama = ["requests>=2.31.0"]
dev = ["pytest>=8.2.0"]

[project.scripts]
stack = "split_stack.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
