[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-llm-router"
version = "0.4.3"
description = "Python routing library for local LLM agent loops: score prompts, map tiers to model names, embed in your runner."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Eddie Baumel" }]
keywords = ["llm", "routing", "ollama", "complexity", "python", "local-first", "agents"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/edwardjbaumel/local-llm-router"
Documentation = "https://github.com/edwardjbaumel/local-llm-router/blob/main/docs/for-app-authors.md"
Repository = "https://github.com/edwardjbaumel/local-llm-router"
Issues = "https://github.com/edwardjbaumel/local-llm-router/issues"

[project.optional-dependencies]
ollama = ["requests>=2.31.0"]
dev = ["pytest>=8.2.0"]

[project.scripts]
llm-router = "local_llm_router.cli:main"
# Deprecated CLI alias — remove in 0.5.0
stack = "local_llm_router.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
